force-app/main/default/objects/fferpcore__BillingDocument__c/fferpcore__BillingDocument__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__BillingDocumentHelp</customHelpPage>
    <description>Contains sales invoice and sales credit note billing documents that enable you to bill and credit customers.</description>
    <label>Billing Document</label>
    <nameField>
        <displayFormat>BD{0000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>