force-app/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__ExternalTaxStatus__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ExternalTaxStatus__c</fullName>
    <description>Status of the external tax calculation if using an external system to calculate tax on the billing document.</description>
    <inlineHelpText>Status of the external tax calculation if using an external system to calculate tax on the billing document. The value can be Not Calculated, Calculated, Finalized or Voided.</inlineHelpText>
    <label>External Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Calculated</fullName>
                <default>true</default>
                <label>Not Calculated</label>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>