force-app/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__NumberOfBillingDocumentLineItems__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__NumberOfBillingDocumentLineItems__c</fullName>
    <description>Number of billing document line items currently associated with this billing document.</description>
    <inlineHelpText>Number of billing document line items currently associated with this billing document.</inlineHelpText>
    <label>Number Of Billing Document Line Items</label>
    <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>