force-app/main/default/objects/fferpcore__BillingDocument__c/fields/fferpcore__TaxValueTotal__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxValueTotal__c</fullName>
    <description>The total tax value of all billing document line items associated with this billing document.</description>
    <inlineHelpText>The total tax value of all billing document line items associated with this billing document.</inlineHelpText>
    <label>Tax Value Total</label>
    <summarizedField>fferpcore__BillingDocumentLineItem__c.fferpcore__TaxValueTotal__c</summarizedField>
    <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>