force-app/main/default/objects/fferpcore__BillingDocument__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__DocumentType__c</columns>
    <columns>fferpcore__Account__c</columns>
    <columns>fferpcore__DocumentStatus__c</columns>
    <columns>fferpcore__DocumentDate__c</columns>
    <columns>fferpcore__DocumentTotal__c</columns>
    <columns>fferpcore__RelatedDocument__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>